--- a/galeria.html
+++ b/galeria.html
@@ -50,16 +50,13 @@
 		<b>
 		<ins>
 		<FONT FACE="courier" SIZE=6 COLOR="white", >
- 		INICIO</FONT>
+ 		GALERIA</FONT>
  	</ins>
  	</b>
-  	<p>
-    	Esta es una página creada para ofrecer información básica y de contacto del equipo de cilismo "Movistar Team" como parte de la actividad No. 2 - "Creando un sitio Web con HTML5 y CSS3", para la materia Diseño de paginas Web, en la Universidad Nacional abierta y a Distancia UNAD para el presente periodo lectivo, año 2016.
-    </p>
-    <figure>
-			<img src="img/movistar.jpg" alt="Logo movistar">
-			</figure>
-			</center>
+  	
+<iframe width="600" height="430" src="//http://www.cincopa.com/media-platform/iframe.aspx?fid=AUFAsf9uMTPX" frameborder="0" allowfullscreen scrolling="no"></iframe><noscript><span>Principales integrantes</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 327</span><span>height</span><span> 154</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1875</span><span>height</span><span> 850</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 307</span><span>height</span><span> 205</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 560</span><span>height</span><span> 373</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 275</span><span>height</span><span> 183</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 284</span><span>height</span><span> 177</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 750</span><span>height</span><span> 500</span></noscript>
+
+</center>
 	</article>
 </section>
 
