--- a/historia.html
+++ b/historia.html
@@ -17,7 +17,6 @@
 
 </head>
 
-
 <body>	
 
 <Div id="contenidos">
@@ -39,8 +38,7 @@
 		<li><a href="historia.html"class="menu">Historia</a></li>
 		<li><a href="galeria.html" class="menu">Galeria</a></li>
 		<li><a href="carreras.html" class="menu">Carreras</a></li>
-		<li><a href="enlaces.html" class="menu">Enlaces</a></li>
-
+		<li><a href="enlaces.html" class="menu">Enlaces</a></li>	</ul>
 	</ul>
 </nav>
 
@@ -50,12 +48,20 @@
 		<b>
 		<ins>
 		<FONT FACE="courier" SIZE=6 COLOR="white", >
- 		INICIO</FONT>
+ 		HISTORIA</FONT>
  	</ins>
  	</b>
   	<p>
-    	Esta es una página creada para ofrecer información básica y de contacto del equipo de cilismo "Movistar Team" como parte de la actividad No. 2 - "Creando un sitio Web con HTML5 y CSS3", para la materia Diseño de paginas Web, en la Universidad Nacional abierta y a Distancia UNAD para el presente periodo lectivo, año 2016.
-    </p>
+    El Movistar Team (código UCI: MOV), es un equipo ciclista español de categoría UCI ProTeam. Participa del UCI WorldTour y en algunas carreras del Circuito Continental.
+	Fue fundado en 1980, bajo el patrocinio de la empresa de aluminio Reynolds. En 1989 pasó a ser patrocinado por el banco español Banesto, que dejó de patrocinar el equipo a finales de 2003. En 2005 entra como copatrocinador el banco francés Caisse d'Epargne, que para la temporada 2006, quedó como único patrocionador, si bien a partir de 2011 este pasa a la compañía telefónica Movistar.
+	</p>
+	<br>
+	
+<font face="verdana" size=5 color="black">
+    <a href="http://www.movistarteam.com/historia/" >Historia (Página Oficial)</a>
+    
+    <br>
+
     <figure>
 			<img src="img/movistar.jpg" alt="Logo movistar">
 			</figure>
@@ -74,7 +80,8 @@
 		<li><a href="historia.html"class="menu">Historia</a></li>
 		<li><a href="galeria.html" class="menu">Galeria</a></li>
 		<li><a href="carreras.html" class="menu">Carreras</a></li>
-		<li><a href="enlaces.html" class="menu">Enlaces</a></li>
+		<li><a href="enlaces.html" class="menu">Enlaces</a></li>	</ul>
+
 	</ul>
 	</center>
 </aside>
