--- a/noticias.html
+++ b/noticias.html
@@ -17,7 +17,6 @@
 
 </head>
 
-
 <body>	
 
 <Div id="contenidos">
@@ -39,9 +38,7 @@
 		<li><a href="historia.html"class="menu">Historia</a></li>
 		<li><a href="galeria.html" class="menu">Galeria</a></li>
 		<li><a href="carreras.html" class="menu">Carreras</a></li>
-		<li><a href="enlaces.html" class="menu">Enlaces</a></li>
-
-	</ul>
+		<li><a href="enlaces.html" class="menu">Enlaces</a></li>	</ul>
 </nav>
 
 <section>
@@ -50,15 +47,27 @@
 		<b>
 		<ins>
 		<FONT FACE="courier" SIZE=6 COLOR="white", >
- 		INICIO</FONT>
+ 		NOTICIAS</FONT>
  	</ins>
  	</b>
   	<p>
-    	Esta es una página creada para ofrecer información básica y de contacto del equipo de cilismo "Movistar Team" como parte de la actividad No. 2 - "Creando un sitio Web con HTML5 y CSS3", para la materia Diseño de paginas Web, en la Universidad Nacional abierta y a Distancia UNAD para el presente periodo lectivo, año 2016.
+      	Aqui las principales noticias del equipo actualmente:
     </p>
+    
+    <font face="verdana" size=5 color="black">
+    <a href="http://www.movistarteam.com/noticias/2016-5-12/valverde-sigue-progresando" >Valverde sigue progresando</a>
+    <br>
+    <br>
+    <a href="http://www.movistarteam.com/noticias/2016-5-11/cuatro-segundos-de-atencion" >Cuatro segundos de atención</a>
+    <br>
+    <br>
+    <a href="http://www.movistarteam.com/noticias/2016-5-10/valverde-en-el-lugar-correcto" >Valverde, en el lugar correcto</a>
+    </font>
+
     <figure>
 			<img src="img/movistar.jpg" alt="Logo movistar">
-			</figure>
+			
+		</figure>
 			</center>
 	</article>
 </section>
