--- a/galeria.html
+++ b/galeria.html
@@ -51,13 +51,17 @@
 		<ins>
 		<FONT FACE="courier" SIZE=6 COLOR="white", >
  		GALERIA</FONT>
+ 		<br>
  	</ins>
  	</b>
   	
 </center>
 	</article>
-
+<center>
 <iframe width="600" height="440" src="http://www.cincopa.com/media-platform/iframe.aspx?fid=AUFAsf9uMTPX" frameborder="0" allowfullscreen scrolling="no"></iframe><noscript><span>Principales integrantes</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 327</span><span>height</span><span> 154</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1875</span><span>height</span><span> 850</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 307</span><span>height</span><span> 205</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 560</span><span>height</span><span> 373</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 275</span><span>height</span><span> 183</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 284</span><span>height</span><span> 177</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 750</span><span>height</span><span> 500</span></noscript>
+
+<a href="https://www.cincopa.com/media-platform/test?fid=AUFAsf9uMTPX"></a>
+</center>
 
 </section>
 
