--- a/noticias.html
+++ b/noticias.html
@@ -9,7 +9,7 @@
 	
     <meta content="Página no oficial del equipo de ciclismo Movistar Team" name="description" />
     <meta content="CICLISMO, EQUIPO, DEPORTE, MOVISTAR" name="keywords" />
-	<title>Movitar TEAM</title>
+	<title>Movistar TEAM</title>
 	<meta content="Marcel Herrera" name="author"/>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
